--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,17 @@
     package="cse.job.asif.job4cse">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
+        android:name=".HelperClass.MainApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".HelperClass.MainApp">
+        android:theme="@style/AppTheme">
         <activity android:name=".Activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +37,9 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".Activities.ViewSavedJobs"></activity>
+        <activity android:name=".Activities.ViewSavedJobs" />
+        <activity android:name=".Activities.UserLogin" />
+        <activity android:name=".Activities.CompanyLogin"></activity>
     </application>
 
 </manifest>
